plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '8.13.1'
}

group = 'net.minecraft'
version = '1.21.11'

def entrypoint = "net.minecraft.client.main.Main"

application {
    mainClass = entrypoint
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.jetbrains:annotations:26.1.0'
    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'

    // Все зависимости из локальной папки libs/
    implementation fileTree(dir: 'libs', include: '*.jar')

    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    manifest {
        attributes("Main-Class": entrypoint)
    }
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
        '-Xlint:none',
        '-nowarn'
    ]
}
